# jamstation

jam-core/: CMakeLists.txt  README.md
jam-core/src/: MainComponent.cpp  MainComponent.h  graph.cpp  graph.h  main.cpp
jam-core/tests/: CMakeLists.txt  test_graph.cpp
